3d 조금 크게 작업

--- a/src/app/pages/pc/home/business-renew/galaxy-business-renew.component.html
+++ b/src/app/pages/pc/home/business-renew/galaxy-business-renew.component.html
@@ -40,7 +40,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="extra-space-xxl"></div>
+                <div class="pc">
+                    <div class="extra-space-xxl"></div>
+                </div>
+                
                 <div class="row">
                     <div class="rotate-fact-start col-md-12 col-sm-12 wow fadeInLeft">
                         <div class="rotate-box-1 square-icon">
