--- a/src/app/pages/pc/home/careers/galaxy-careers.component.html
+++ b/src/app/pages/pc/home/careers/galaxy-careers.component.html
@@ -14,27 +14,45 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
-                    <div class="col-sm-6 col-md-8">
-                        <div class="contact-info">
-                            <h5>우리의 메타버스를 함께 </h5>
-                            <h5>여행할갤럭시 DNA를 </h5>
-                            <h5>가진 분들과 함께합니다.</h5>
+                    <div class="pc">
+                        <div class="dna-fact-start col-sm-12 col-md-12">
+                            <div class="contact-info">
+                                <h5>우리의 메타버스를 함께 </h5>
+                                <h5>여행할 갤럭시 DNA를 </h5>
+                                <h5>가진 분들과 함께합니다.</h5>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="mobile">
+                        <div class="dna-fact-start col-sm-4 col-md-4">
+                            <div class="contact-info">
+                                <h5>우리의 메타버스를 함께 </h5>
+                                <h5>여행할 갤럭시 DNA를 </h5>
+                                <h5>가진 분들과 함께합니다.</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="col-sm-6 col-md-4">
                         <div class="contact-form" #contactForm>
                             <app-connection [contactFormElement]="contactFormElement"></app-connection>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
-            <div class="extra-space-xxl"></div>
+            <div class="pc">
+                <div class="extra-space-xxl"></div>
+            </div>
             <div class="row">
                 <div class="col-sm-12 col-md-12">
                     <div class="dna-fact-start col-sm-4 col-md-4">
                         <div class="dna-info">
-                            <h5 style="margin-bottom: 0px;">PIONEER</h5>
-                            <h5>SPIRIT</h5>
+                            <div class="pc">
+                                <h5 style="margin-bottom: 0px;">PIONEER</h5>
+                                <h5>SPIRIT</h5>
+                            </div>
+                            <div class="mobile">
+                                <h5>PIONEER SPIRIT</h5>
+                            </div>
                             <div class="extra-space-m"></div>
                             <div class="pc" style="margin-right: 50px;">
                                 <p class="subTitle"> 우리는 모험심이 강한 집단입니다. 새로운 것을 탐험하고 남들과 다른 사고와 도전정신으로 누구보다 빨리 새로운 세상을 맞이할 사람들. 우리는 그런 분들과 새로운 세상을 만들어 갑니다.</p>
@@ -72,14 +90,13 @@
                         <div class="extra-space-l"></div>
                         <div class="dna-info text-right">
                             <div class="pc">
-                                <p class="mainTitle">커리어 성장을 위한 다양한 기회를 지금 확인해 보십시오. <a href="#"><img src="assets/images/home/business/home.png" width="75px" /></a></p>
+                                <p class="mainTitle">커리어 성장을 위한 다양한 기회를 지금 확인해 보십시오.</p>
                             </div>
                             <div class="mobile text-center">
-                                <p class="subTitle">커리어 성장을 위한 다양한 기회를 지금 확인해 보십시오. <a href="#"><img src="assets/images/home/business/home.png" width="60px" /></a></p>
+                                <p class="subTitle">커리어 성장을 위한 다양한 기회를 지금 확인해 보십시오.</p>
                             </div>
                         </div>
                     </div>
-                    
                 </div>
             </div>
         </div>
