--- a/src/app/pages/pc/home/contact/galaxy-contact.component.html
+++ b/src/app/pages/pc/home/contact/galaxy-contact.component.html
@@ -43,7 +43,7 @@
                             <div class="form-group">
                                 <textarea class="form-control input-lg" rows="5" placeholder="내용" required></textarea>
                             </div>
-                            <button type="submit" class="btn wow bounceInRight">Send</button>
+                            <button type="submit" class="btn">Send</button>
                         </form>
                     </div>
                     <div class="col-sm-4">
