--- a/src/app/pages/pc/home/intro/galaxy-company.component.html
+++ b/src/app/pages/pc/home/intro/galaxy-company.component.html
@@ -27,21 +27,21 @@
                                 <img src="assets/images/home/intro/first_m.png" width="80%" />
                             </div>
                         </div>
-                        <div class="fact-inner-start col-md-8 col-sm-6">
+                        <div class="fact-inner-start col-md-7 col-sm-6">
                             <div class="pc">
-                                <span class="subTitle" style="display: block;">새로운 메타버스의 시대, 갤럭시 코레퍼레이션은</span>
+                                <span class="subTitle" style="display: block;">새로운 메타버스의 시대, 갤럭시코퍼레이션은</span>
                                 <span class="subTitle" style="display: block;">누구나가 즐겁게 꿈을 이룰 수 있는</span>
                                 <span class="subTitle" style="display: block;">갤럭시만의 메타버스 세계를 만들어 </span>
                                 <span class="subTitle" style="display: block;">새로운 세상 새로운 라이프를 만들어 갑니다.</span>
                             </div>
                             <div class="mobile">
-                                <span class="subTitle" style="display: block;">새로운 메타버스의 시대, 갤럭시 코레퍼레이션은</span>
+                                <span class="subTitle" style="display: block;">새로운 메타버스의 시대, 갤럭시코퍼레이션은</span>
                                 <span class="subTitle" style="display: block;">누구나가 즐겁게 꿈을 이룰 수 있는</span>
                                 <span class="subTitle" style="display: block;">갤럭시만의 메타버스 세계를 만들어 </span>
                                 <span class="subTitle" style="display: block;">새로운 세상 새로운 라이프를 만들어 갑니다.</span>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6" #motion4>
+                        <div class="col-md-5 col-sm-6" #motion4>
                             <app-culture [motion4Element]="motion4Element"></app-culture>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                             <!-- <h1>NEW WORLD</h1>
                           <h1>CONNECTION</h1> -->
                         </div>
-                        <div class="fact-inner-start col-md-8 col-sm-6">
+                        <div class="fact-inner-start col-md-7 col-sm-6">
                             <div class="pc">
                                 <span class="subTitle" style="display: block;">우리가 만든 메타버스의 세계, </span>
                                 <span class="subTitle" style="display: block;">‘페르소나 별’은 무한한 콘텐츠 세상을 연결합니다.</span>
@@ -76,7 +76,7 @@
                                 <span class="subTitle" style="display: block;">만들어 갑니다. </span>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6" #motion3>
+                        <div class="col-md-5 col-sm-6" #motion3>
                             <app-persona [motion3Element]="motion3Element"></app-persona>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                             <!-- <h1>INSPIRE</h1>
                           <h1>PERSONA</h1> -->
                         </div>
-                        <div class="fact-inner-start col-md-8 col-sm-6">
+                        <div class="fact-inner-start col-md-7 col-sm-6">
                             <div class="pc">
                                 <span class="subTitle" style="display: block;">우리는 갤럭시 유니버스를 통해 온,오프라인의</span>
                                 <span class="subTitle" style="display: block;">다양한 IP를 유기적으로 연결하여 가장 이상적인</span>
@@ -107,7 +107,7 @@
                                 <span class="subTitle" style="display: block;">생태계를 구축합니다.</span>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6" #motion2>
+                        <div class="col-md-5 col-sm-6" #motion2>
                             <app-world [motion2Element]="motion2Element"></app-world>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                             <!-- <h1>CULTURE</h1>
                           <h1>CREATION</h1> -->
                         </div>
-                        <div class="fact-inner-start col-md-8 col-sm-6">
+                        <div class="fact-inner-start col-md-7 col-sm-6">
                             <div class="pc">
                                 <span class="subTitle" style="display: block;">우리가 만든 메타버스 세상 속, 갤럭시 IP는</span>
                                 <span class="subTitle" style="display: block;">이전에 경험하지 못한 새로운 세상을 만들어가고</span>
@@ -138,7 +138,7 @@
                                 <span class="subTitle" style="display: block;">문화를 개척합니다.</span>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6" #motion1>
+                        <div class="col-md-5 col-sm-6" #motion1>
                             <app-metaverse [motion1Element]="motion1Element"></app-metaverse>
                         </div>
                     </div>
