--- a/src/app/pages/pc/home/social/galaxy-social.component.html
+++ b/src/app/pages/pc/home/social/galaxy-social.component.html
@@ -16,7 +16,7 @@
     <div class="rotate-box-1-wrapper">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-12 wow slideInLeft fact text-center">
+                <div class="col-sm-12 col-md-12 fact text-center">
                     <div class="pc">
                         <span class="subTitle" style="display: block;">하루가 다르게 각종 분야에서 메타버스 소식들이 쏟아지고 있습니다.</span>
                         <span class="subTitle" style="display: block;">갤럭시코퍼레이션의 소식과 메타버스 정보들을 전해드립니다.</span>
