글자크기를 좀 줄임

--- a/src/app/pages/pc/home/careers/galaxy-careers.component.html
+++ b/src/app/pages/pc/home/careers/galaxy-careers.component.html
@@ -88,7 +88,7 @@
                     </div>
                     <div class="dna-fact-start col-sm-12 col-md-12 ">
                         <div class="extra-space-l"></div>
-                        <div class="dna-info text-right">
+                        <div class="dna-info text-center">
                             <div class="pc">
                                 <p class="mainTitle">커리어 성장을 위한 다양한 기회를 지금 확인해 보십시오.</p>
                             </div>
