--- a/src/app/pages/pc/home/social/galaxy-social.component.html
+++ b/src/app/pages/pc/home/social/galaxy-social.component.html
@@ -23,8 +23,10 @@
                         <span class="subTitle" style="display: block;">갤럭시의 ‘메타버스 뉴스 레터’를 구독해보세요.</span>
                     </div>
                     <div class="mobile">
-                        <span class="subTitle" style="display: block;">하루가 다르게 각종 분야에서 메타버스 소식들이 쏟아지고 있습니다.</span>
-                        <span class="subTitle" style="display: block;">갤럭시코퍼레이션의 소식과 메타버스 정보들을 전해드립니다.</span>
+                        <span class="subTitle" style="display: block;">하루가 다르게 각종 분야에서 메타버스</span>
+                        <span class="subTitle" style="display: block;">소식들이 쏟아지고 있습니다.</span>
+                        <span class="subTitle" style="display: block;">갤럭시코퍼레이션의 소식과</span>
+                        <span class="subTitle" style="display: block;">메타버스 정보들을 전해드립니다.</span>
                         <span class="subTitle" style="display: block;">갤럭시의 ‘메타버스 뉴스 레터’를 구독해보세요.</span>
                     </div>
                 </div>
@@ -36,7 +38,7 @@
                     </div>
                     <div class="col-sm-4 col-md-4">
                         <a href="#">
-                            <img src="assets/images/home/social/subscribe.png" />
+                            <img src="assets/images/home/social/subscribe.png" width="70%"/>
                         </a>
                     </div>
                     <div class="col-sm-4 col-md-4">
