--- a/src/app/pages/pc/home/business-renew/galaxy-business-renew.component.html
+++ b/src/app/pages/pc/home/business-renew/galaxy-business-renew.component.html
@@ -31,11 +31,10 @@
                                     <span class="subTitle" style="display: block;">꿈을 만들고 있습니다.</span>
                                 </div>
                                 <div class="mobile">
-                                    <span class="subTitle" style="font-size: 17px; display: block;">무한한 콘텐츠의 세계로 당신을 초대합니다.</span>
-                                    <span class="subTitle" style="font-size: 17px; display: block;">갤럭시 코퍼레이션은 IP, 세계관, 커머스, </span>
-                                    <span class="subTitle" style="font-size: 17px; display: block;">메타버스 서비스로 꿈을 만들고 있습니다.</span>
+                                    <span class="subTitle" style="display: block;">무한한 콘텐츠의 세계로 당신을 초대합니다.</span>
+                                    <span class="subTitle" style="display: block;">갤럭시 코퍼레이션은 IP, 세계관, 커머스, </span>
+                                    <span class="subTitle" style="display: block;">메타버스 서비스로 꿈을 만들고 있습니다.</span>
                                 </div>
-                                
                             </div>
                         </div>
                     </div>
@@ -43,7 +42,6 @@
                 <div class="pc">
                     <div class="extra-space-xxl"></div>
                 </div>
-                
                 <div class="row">
                     <div class="rotate-fact-start col-md-12 col-sm-12 wow fadeInLeft">
                         <div class="rotate-box-1 square-icon">
@@ -65,11 +63,11 @@
                                     <span class="subTitle" style="font-size: 23px; display: block;">산업으로 혁신해 나가고 있습니다.</span>
                                 </div>
                                 <div class="mobile">
-                                    <span class="subTitle" style="font-size: 17px; display: block;">갤럭시의 IP들은 멀티페르소나 시대정신을</span>
-                                    <span class="subTitle" style="font-size: 17px; display: block;">반영하여 오프라인의 휴먼형/ 온라인의 버츄얼휴먼/ </span>
-                                    <span class="subTitle" style="font-size: 17px; display: block;">온오프라인의 캐릭터로 재정의합니다. </span>
-                                    <span class="subTitle" style="font-size: 17px; display: block;">메타버스 시대의 이상적인 엔터테인먼트 </span>
-                                    <span class="subTitle" style="font-size: 17px; display: block;">산업으로 혁신해 나가고 있습니다.</span>
+                                    <span class="subTitle" style="display: block;">갤럭시의 IP들은 멀티페르소나 시대정신을</span>
+                                    <span class="subTitle" style="display: block;">반영하여 오프라인의 휴먼형/ 온라인의 버츄얼휴먼/ </span>
+                                    <span class="subTitle" style="display: block;">온오프라인의 캐릭터로 재정의합니다. </span>
+                                    <span class="subTitle" style="display: block;">메타버스 시대의 이상적인 엔터테인먼트 </span>
+                                    <span class="subTitle" style="display: block;">산업으로 혁신해 나가고 있습니다.</span>
                                     <div class="extra-space-xl"></div>
                                 </div>
                             </div>
@@ -99,11 +97,11 @@
                                     <span class="subTitle" style="font-size: 23px; display: block;">비즈니스를 아우를 수 있는 메타버스 세계관을 제공합니다.</span>
                                 </div>
                                 <div class="mobile">
-                                    <span class="subTitle" style="font-size: 17px; display: block;">갤럭시의 IP들은 멀티페르소나 시대정신을</span>
-                                    <span class="subTitle" style="font-size: 17px; display: block;">무한 확장 가능한 세계관 생태계를 구축하고 </span>
-                                    <span class="subTitle" style="font-size: 17px; display: block;">이를 통해 예능, 드라마, 뮤지컬, 영화등 끊임없이 </span>
-                                    <span class="subTitle" style="font-size: 17px; display: block;">확장할 수 있고 이를 통해 다양한</span>
-                                    <span class="subTitle" style="font-size: 17px; display: block;">비즈니스를 아우를 수 있는 메타버스 세계관을 제공합니다.</span>
+                                    <span class="subTitle" style="display: block;">갤럭시의 IP들은 멀티페르소나 시대정신을</span>
+                                    <span class="subTitle" style="display: block;">무한 확장 가능한 세계관 생태계를 구축하고 </span>
+                                    <span class="subTitle" style="display: block;">이를 통해 예능, 드라마, 뮤지컬, 영화등 끊임없이 </span>
+                                    <span class="subTitle" style="display: block;">확장할 수 있고 이를 통해 다양한 비즈니스를</span>
+                                    <span class="subTitle" style="display: block;">아우를 수 있는 메타버스 세계관을 제공합니다.</span>
                                     <div class="extra-space-xl"></div>
                                 </div>
                             </div>
@@ -131,9 +129,11 @@
                                     <span class="subTitle" style="font-size: 23px; display: block;">그 속에서 메타버스 라이프를 만들어 갑니다.</span>
                                 </div>
                                 <div class="mobile">
-                                    <span class="subTitle" style="font-size: 17px; display: block;">우리 모두가 또 다른 나를 만들어 꿈과 희망을 펼칠 수 있는</span>
-                                    <span class="subTitle" style="font-size: 17px; display: block;">페르소나 플랫폼, 그 곳에서 우리는 새로운 시대를 맞이하고,</span>
-                                    <span class="subTitle" style="font-size: 17px; display: block;">그 속에서 메타버스 라이프를 만들어 갑니다.</span>
+                                    <span class="subTitle" style="display: block;">우리 모두가 또 다른 나를 만들어</span>
+                                    <span class="subTitle" style="display: block;">꿈과 희망을 펼칠 수 있는</span>
+                                    <span class="subTitle" style="display: block;">페르소나 플랫폼, 그 곳에서 </span>
+                                    <span class="subTitle" style="display: block;">우리는 새로운 시대를 맞이하고, </span>
+                                    <span class="subTitle" style="display: block;">그 속에서 메타버스 라이프를 만들어 갑니다.</span>
                                     <div class="extra-space-xl"></div>
                                 </div>
                             </div>
