일단 작업 완료

--- a/src/app/pages/pc/home/ip/galaxy-ip.component.html
+++ b/src/app/pages/pc/home/ip/galaxy-ip.component.html
@@ -22,6 +22,22 @@
                                 <div class="ip col-xs-4 col-sm-4 wow fadeInUp">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z0_detail.jpg" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z0.png" alt="title" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="mobile">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z0_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z0.png" alt="title" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="ip col-xs-4 col-sm-4 wow fadeInUp">
+                                    <div class="pc">
+                                        <div class="portfolio_single_content">
                                             <a href="assets/images/home/portfolio/z1_detail.png" data-lightbox="portfolio" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z1.png" alt="title" />
                                             </a>
@@ -29,7 +45,7 @@
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z1_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z1.png" alt="title" />
                                             </a>
                                         </div>
@@ -38,14 +54,14 @@
                                 <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z2_detail.png" data-lightbox="portfolio" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z2_detail.jpg" data-lightbox="portfolio" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z2.png" alt="title" />
                                             </a>
                                         </div>
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z2_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z2.png" alt="title" />
                                             </a>
                                         </div>
@@ -54,14 +70,14 @@
                                 <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.2s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z3_detail.png" data-lightbox="portfolio" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z3_detail.jpg" data-lightbox="portfolio" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z3.png" alt="title" />
                                             </a>
                                         </div>
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z3_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z3.png" alt="title" />
                                             </a>
                                         </div>
@@ -77,7 +93,7 @@
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z4_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z4.png" alt="title" />
                                             </a>
                                         </div>
@@ -109,7 +125,7 @@
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z6_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z6.png" alt="title" />
                                             </a>
                                         </div>
@@ -125,7 +141,7 @@
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z7_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z7.png" alt="title" />
                                             </a>
                                         </div>
@@ -141,7 +157,7 @@
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z8_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z8.png" alt="title" />
                                             </a>
                                         </div>
