--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -11,7 +11,7 @@
                         <img src="assets/images/home/about/mo/main_enjoy_our_metaverse_m.png" width="70%"/>
                     </h1>
                     <!-- <h1>ENJOY OUR METAVERS</h1> -->
-                    <a class="btn btn-blank" href="#" target="_blank" role="button" style="padding: 0px;"><img src="assets/images/home/main/main_who_we_are_m.png" width="60%"/></a>
+                    <a class="btn btn-blank page-scroll" href="#company-section" style="padding: 0px;"><img src="assets/images/home/main/main_who_we_are_m.png" width="60%"/></a>
                 </div>
                 <div class="item">
                     <h1 class="pc">
@@ -21,7 +21,7 @@
                         <img src="assets/images/home/about/mo/main_persona_universe_m.png" width="70%"/>
                     </h1>
                     <!-- <h1>PERSONA UNIVERSE</h1> -->
-                    <a class="btn btn-blank" href="#" target="_blank" role="button" style="padding: 0px;"><img src="assets/images/home/main/main_our_persona_m.png" width="70%"/></a>
+                    <a class="btn btn-blank page-scroll" href="#galaxy-ip-section" style="padding: 0px;"><img src="assets/images/home/main/main_our_persona_m.png" width="70%"/></a>
                 </div>
                 <div class="item">
                     <h1 class="pc">
@@ -31,7 +31,7 @@
                         <img src="assets/images/home/about/mo/main_with_us_together_m.png" width="70%"/>
                     </h1>
                     <!-- <h1>WITH US TO INFINITY</h1> -->
-                    <a class="btn btn-blank" href="#" target="_blank" role="button" style="padding: 0px;"><img src="assets/images/home/main/main_what_we_do_m.png" width="60%"/></a>
+                    <a class="btn btn-blank page-scroll" href="#business-section" style="padding: 0px;"><img src="assets/images/home/main/main_what_we_do_m.png" width="60%"/></a>
                 </div>
             </div>
         </div>
