크기 줄이기

--- a/src/app/pages/pc/home/careers/galaxy-careers.component.html
+++ b/src/app/pages/pc/home/careers/galaxy-careers.component.html
@@ -91,9 +91,11 @@
                         <div class="dna-info text-center">
                             <div class="pc">
                                 <p class="mainTitle">커리어 성장을 위한 다양한 기회를 지금 확인해 보십시오.</p>
+                                <a href="#"><p class="mainTitle" style="font-weight: bold;">지원하기</p></a>
                             </div>
                             <div class="mobile text-center">
                                 <p class="subTitle">커리어 성장을 위한 다양한 기회를 지금 확인해 보십시오.</p>
+                                <a href="#"><p class="subTitle" style="font-weight: bold;">지원하기</p></a>
                             </div>
                         </div>
                     </div>
