--- a/src/app/pages/pc/home/intro/galaxy-company.component.html
+++ b/src/app/pages/pc/home/intro/galaxy-company.component.html
@@ -34,7 +34,7 @@
                                 <span class="subTitle" style="display: block;">갤럭시만의 메타버스 세계를 만들어 </span>
                                 <span class="subTitle" style="display: block;">새로운 세상 새로운 라이프를 만들어 갑니다.</span>
                             </div>
-                            <div class="mobile">
+                            <div class="mobile" style="margin-bottom: 50px;">
                                 <span class="subTitle" style="display: block;">새로운 메타버스의 시대, 갤럭시코퍼레이션은</span>
                                 <span class="subTitle" style="display: block;">누구나가 즐겁게 꿈을 이룰 수 있는</span>
                                 <span class="subTitle" style="display: block;">갤럭시만의 메타버스 세계를 만들어 </span>
@@ -67,7 +67,7 @@
                                 <span class="subTitle" style="display: block;">함께 만들어가 가는 메타버스 초연결 통합 허브를 </span>
                                 <span class="subTitle" style="display: block;">만들어 갑니다. </span>
                             </div>
-                            <div class="mobile">
+                            <div class="mobile" style="margin-bottom: 50px;">
                                 <span class="subTitle" style="display: block;">우리가 만든 메타버스의 세계, ‘페르소나 별’은</span>
                                 <span class="subTitle" style="display: block;">무한한 콘텐츠 세상을 연결합니다.</span>
                                 <span class="subTitle" style="display: block;">그속에서 활동하는 갤럭시 IP들은 다양한 </span>
@@ -100,7 +100,7 @@
                                 <span class="subTitle" style="display: block;">메타버스산업을 이끌며, 지속 가능한 페르소나IP </span>
                                 <span class="subTitle" style="display: block;">생태계를 구축합니다.</span>
                             </div>
-                            <div class="mobile">
+                            <div class="mobile" style="margin-bottom: 50px;">
                                 <span class="subTitle" style="display: block;">우리는 갤럭시 유니버스를 통해 온,오프라인의</span>
                                 <span class="subTitle" style="display: block;">다양한 IP를 유기적으로 연결하여 가장 이상적인</span>
                                 <span class="subTitle" style="display: block;">메타버스산업을 이끌며, 지속 가능한 페르소나IP </span>
@@ -131,7 +131,7 @@
                                 <span class="subTitle" style="display: block;">나아가 부캐 페르소나 라는 메타버스속 새로운 </span>
                                 <span class="subTitle" style="display: block;">문화를 개척합니다.</span>
                             </div>
-                            <div class="mobile">
+                            <div class="mobile" style="margin-bottom: 50px;">
                                 <span class="subTitle" style="display: block;">우리가 만든 메타버스 세상 속, 갤럭시 IP는</span>
                                 <span class="subTitle" style="display: block;">이전에 경험하지 못한 새로운 세상을 만들어가고</span>
                                 <span class="subTitle" style="display: block;">나아가 부캐 페르소나 라는 메타버스속 새로운 </span>
