--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -11,7 +11,7 @@
                         <img src="assets/images/home/about/mo/main_enjoy_our_metaverse_m.png" width="70%"/>
                     </h1>
                     <!-- <h1>ENJOY OUR METAVERS</h1> -->
-                    <a class="btn btn-blank page-scroll" href="#company-section" style="padding: 0px;"><img src="assets/images/home/main/main_who_we_are_m.png" width="60%"/></a>
+                    <a class="btn btn-blank page-scroll" href="#dna-section" style="padding: 0px;"><img src="assets/images/home/main/main_who_we_are_m.png" width="60%"/></a>
                 </div>
                 <div class="item">
                     <h1 class="pc">
