--- a/src/app/pages/pc/home/careers/galaxy-careers.component.html
+++ b/src/app/pages/pc/home/careers/galaxy-careers.component.html
@@ -1,4 +1,4 @@
-<section id="dna-section" class="page bg-style1 text-white" data-stellar-background-ratio="0.5">
+<section id="dna-section" class="page bg-style1 text-white">
     <!-- <div class="cover"></div> -->
     <!-- Begin page header-->
     <!-- <div class="page-header-wrapper">
@@ -10,7 +10,7 @@
         </div>
     </div> -->
     <!-- End page header-->
-    <div class="contact wow bounceInRight" data-wow-delay="0.4s">
+    <div class="contact">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
