--- a/src/app/pages/pc/home/ip/galaxy-ip.component.html
+++ b/src/app/pages/pc/home/ip/galaxy-ip.component.html
@@ -99,7 +99,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
+                                <!-- <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
                                             <a href="assets/images/home/portfolio/z5_detail.png" data-lightbox="portfolio" class="link-preview">
@@ -114,7 +114,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.5s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
