commnet ip section

--- a/src/app/pages/pc/home/galaxy-home.component.html
+++ b/src/app/pages/pc/home/galaxy-home.component.html
@@ -5,7 +5,7 @@
 <app-galaxy-company></app-galaxy-company>
 <!-- End compnay section -->
 <!-- Begin ip section -->
-<app-galaxy-ip></app-galaxy-ip>
+<!-- <app-galaxy-ip></app-galaxy-ip> -->
 <!-- End ip section -->
 <!-- Begin business section -->
 <app-galaxy-business-renew></app-galaxy-business-renew>
