--- a/src/app/pages/pc/home/ip/galaxy-ip.component.html
+++ b/src/app/pages/pc/home/ip/galaxy-ip.component.html
@@ -22,7 +22,7 @@
                                 <div class="ip col-xs-4 col-sm-4 wow fadeInUp">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z0_detail.jpg" data-lightbox="portfolio" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z0_detail.png" data-lightbox="portfolio" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z0.png" alt="title" />
                                             </a>
                                         </div>
@@ -54,7 +54,7 @@
                                 <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z2_detail.jpg" data-lightbox="portfolio" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z2_detail.png" data-lightbox="portfolio" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z2.png" alt="title" />
                                             </a>
                                         </div>
@@ -70,7 +70,7 @@
                                 <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.2s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z3_detail.jpg" data-lightbox="portfolio" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z3_detail.png" data-lightbox="portfolio" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z3.png" alt="title" />
                                             </a>
                                         </div>
@@ -99,7 +99,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
+                                <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
                                             <a href="assets/images/home/portfolio/z5_detail.png" data-lightbox="portfolio" class="link-preview">
@@ -114,7 +114,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                </div> -->
+                                </div>
                                 <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.5s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
