--- a/src/app/pages/pc/home/contact/galaxy-contact.component.html
+++ b/src/app/pages/pc/home/contact/galaxy-contact.component.html
@@ -21,7 +21,7 @@
                             <li><i class="fa fa-user"></i> 대표자 : 최용호</li>
                             <li><i class="fa fa-file"></i> 사업자등록번호 : 781-86-01607</li>
                             <li><i class="fa fa-map-marker fa-lg"></i> 서울 영등포구 국제금융로 10 Two IFC 12F,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 10, Gukjegeumyung-ro, Yeongdeungpo-gu,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Seoul, Republic of Korea</li>
-                            <li><i class="fa fa-envelope"></i> choiyh@galaxyuniverse.ai</li>
+                            <li><i class="fa fa-envelope"></i> business@galaxy-corporation.com</li>
                             
                         </ul>
                     </div>
