유세윤 제거

--- a/src/app/pages/pc/home/ip/galaxy-ip.component.html
+++ b/src/app/pages/pc/home/ip/galaxy-ip.component.html
@@ -35,7 +35,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="ip col-xs-4 col-sm-4 wow fadeInUp">
+                                <!-- <div class="ip col-xs-4 col-sm-4 wow fadeInUp">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
                                             <a href="assets/images/home/portfolio/z1_detail.png" data-lightbox="portfolio" class="link-preview">
@@ -50,7 +50,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
